<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootExperimentList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingTop="0dp"
    android:paddingRight="0dp"
    android:paddingBottom="0dp"
    tools:context=".ExperimentList.ExperimentListActivity">

    <RelativeLayout
        android:id="@+id/expListHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/phyphox_black_60"
        android:elevation="8dp"
        android:fitsSystemWindows="true">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/titleIconSizeCustom"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/phyphox_dark"
            android:scaleType="fitStart" />

        <ImageView
            android:id="@+id/credits"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/titleIconSize"
            android:layout_alignTop="@+id/logo"
            android:layout_alignParentStart="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/info"
            app:srcCompat="@drawable/info"
            app:tint="@color/phyphox_white_90" />


    </RelativeLayout>

    <de.rwth_aachen.phyphox.Helper.ReportingScrollView
        android:id="@+id/experimentScroller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expListHeader"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:clipToPadding="false"

        android:fillViewport="false">

        <LinearLayout
            android:id="@+id/experimentList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="true"
            android:orientation="vertical"
            android:paddingTop="@dimen/experiment_list_optional_top_padding" />

    </de.rwth_aachen.phyphox.Helper.ReportingScrollView>

    <View
        android:id="@+id/experimentListDimmer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/phyphox_black_60"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newExperimentQR"
        style="?attr/floatingActionButtonSmallStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/newExperimentBluetooth"
        android:layout_alignRight="@id/newExperiment"
        android:layout_marginRight="9dp"
        android:layout_marginBottom="-18dp"
        android:backgroundTint="@color/phyphox_white_80"
        android:clickable="false"
        android:contentDescription="@string/newExperimentQR"
        android:elevation="12dp"
        android:text="@string/newExperimentQR"
        android:visibility="invisible"
        app:borderWidth="0dp"
        app:srcCompat="@drawable/new_experiment_qr"
        app:tint="@color/phyphox_black_80"
        app:useCompatPadding="true" />

    <TextView
        android:id="@+id/newExperimentQRLabel"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_alignTop="@id/newExperimentQR"
        android:layout_toLeftOf="@id/newExperimentQR"
        android:gravity="center"
        android:text="@string/newExperimentQR"
        android:textColor="@color/phyphox_white_100"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newExperimentBluetooth"
        style="?attr/floatingActionButtonSmallStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/newExperimentSimple"
        android:layout_alignRight="@id/newExperiment"
        android:layout_marginRight="9dp"
        android:layout_marginBottom="-18dp"
        android:backgroundTint="@color/phyphox_blue_100"
        android:clickable="false"
        android:contentDescription="@string/newExperimentBluetooth"
        android:elevation="12dp"
        android:text="@string/newExperimentBluetooth"
        android:visibility="invisible"
        app:borderWidth="0dp"
        app:srcCompat="@drawable/new_experiment_bluetooth"
        app:tint="@color/phyphox_white_100"
        app:useCompatPadding="true" />

    <TextView
        android:id="@+id/newExperimentBluetoothLabel"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_alignTop="@id/newExperimentBluetooth"
        android:layout_toLeftOf="@id/newExperimentBluetooth"
        android:gravity="center"
        android:text="@string/newExperimentBluetooth"
        android:textColor="@color/phyphox_white_100"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newExperimentSimple"
        style="?attr/floatingActionButtonSmallStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/newExperiment"
        android:layout_alignRight="@id/newExperiment"
        android:layout_marginRight="9dp"
        android:layout_marginBottom="-18dp"
        android:backgroundTint="@color/phyphox_red"
        android:clickable="false"
        android:contentDescription="@string/newExperimentSimple"
        android:elevation="12dp"
        android:text="@string/newExperimentSimple"
        android:visibility="invisible"
        app:borderWidth="0dp"
        app:srcCompat="@drawable/new_experiment_simple"
        app:tint="@color/phyphox_white_100"
        app:useCompatPadding="true" />

    <TextView
        android:id="@+id/newExperimentSimpleLabel"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_alignTop="@id/newExperimentSimple"
        android:layout_toLeftOf="@id/newExperimentSimple"
        android:gravity="center"
        android:text="@string/newExperimentSimple"
        android:textColor="@color/phyphox_white_100"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newExperiment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/newExperiment"
        android:elevation="12dp"
        android:text="@string/newExperiment"
        app:backgroundTint="@color/phyphox_primary"
        app:fabSize="normal"
        app:srcCompat="@drawable/new_experiment"
        app:tint="@color/phyphox_white_100"
        app:useCompatPadding="true" />

</RelativeLayout>
